--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,8 +15,13 @@
 ::-webkit-scrollbar-thumb {
     background-color: #a31621;
 }
+/* 
+::placeholder {
+    font-size: 0.75rem;
+} */
+
 .modal-container {
-    background: rgba( 255, 255, 255, 0.3 );
+    background: rgba( 255, 255, 255, 0 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 2px );
     -webkit-backdrop-filter: blur( 2px );
@@ -29,4 +34,8 @@
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 1px );
     -webkit-backdrop-filter: blur( 1px );
+}
+
+.custom-checkbox {
+    accent-color: #a31621;
 }
